# todo

./: .gitignore  CLAUDE.md  Cargo.toml  index.html  package-lock.json  package.json  version.json  vite.config.ts
.claude/: launch.json
apps/desktop/: package-lock.json  package.json
apps/desktop/src/: App.tsx  index.css  main.tsx  themes.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/: app.json  metro.config.js  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx
apps/mobile/constants/: theme.ts
apps/mobile/services/: data-provider.ts  database.ts  provider-context.tsx  sqlite-provider.ts  sync-utils.ts  sync.ts  turso.ts
daily-triage-core/: Cargo.toml
daily-triage-core/src/: lib.rs  types.rs
daily-triage-core/src/api/: anthropic.rs  calendar.rs  mod.rs  todoist.rs  todoist_migration.rs  updater.rs
daily-triage-core/src/db/: activity.rs  capture_routes.rs  captures.rs  daily_state.rs  docs.rs  focus.rs  goals.rs  habits.rs  migrations.rs  mod.rs  projects.rs  settings.rs  sync.rs  tasks.rs
daily-triage-core/src/parsers/: ical.rs  markdown.rs  mod.rs
docs/: MOBILE-ARCHITECTURE.md  buildplan.md  goals-ui-research.md  goals-ux-decisions.md  polish-pass-audit.md  roadmap.md  theming-research.md  typography-system.md  wave-b-migration.md
docs/superpowers/plans/: 2026-04-18-typography-system.md
docs/superpowers/specs/: 2026-04-18-typography-system-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: activity.rs  ai.rs  calendar.rs  capture_routes.rs  captures.rs  docs.rs  focus.rs  goals.rs  habits.rs  import.rs  local_tasks.rs  mod.rs  obsidian.rs  priorities.rs  progress.rs  projects.rs  settings.rs  todoist.rs  updater.rs
src-tauri/src/db/: activity.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/parsers/: ical.rs  markdown.rs
src/components/activity/: ActivityTimeline.tsx
src/components/calendar/: CalendarPanel.tsx
src/components/detail/: CaptureDetailPage.tsx  DetailBreadcrumbs.tsx  DetailSidebar.tsx  InlineTitle.tsx  (+3 more)
src/hooks/: useCalendar.ts  useFocusQueue.ts  useLocalTasks.ts  useObsidian.ts  usePriorities.ts  useRefresh.ts  useSave.ts  useTaskDetail.ts  useTaskNavigation.ts  useTheme.ts  useTodoist.ts
src/lib/: priorities.ts  sound.ts  taskToast.ts
src/services/: data-provider.ts  provider-context.tsx  tauri-provider.ts  tauri.ts  types.ts
src/stores/: appStore.ts  detailStore.ts  docsStore.ts  focusStore.ts  goalsStore.ts  layoutStore.ts
(+173 files in other folders)
