[package]
name = "daily-triage-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.50.0", features = ["full"] }
ical = "0.11.0"
dirs = "6.0.0"
futures = "0.3"
log = "0.4"
thiserror = "2"
